--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="5.2.4"
+        description="April 8th, 2020">
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="5.2.3"
         description="March 15th, 2020">
         <text>Improvements for dual SIM devices</text>
