--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -115,6 +115,7 @@
     <string name="pref_heads_up" translatable="false">heads_up</string>
     <string name="pref_strip_unicode" translatable="false">strip_unicode</string>
     <string name="pref_history_in_notifications" translatable="false">history_in_notifications</string>
+    <string name="pref_hide_message_content" translatable="false">hide_message_content</string>
     <string name="pref_dismiss_notifications_on_reply_android_p" translatable="false">dismiss_notifications_on_reply_android_p</string>
     <string name="pref_giffgaff" translatable="false">giffgaff_delivery</string>
     <string name="pref_notification_actions" translatable="false">notification_actions</string>
