--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,8 +17,14 @@
 <changelog>
 
     <version
+        name="5.3.3"
+        description="May 30th, 2020">
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="5.3.2"
-        description="May 15th, 2020">
+        description="May 22nd, 2020">
         <text>Bug fixes</text>
     </version>
 
