Experimental option: Blacklist phrases as regex (#57)
* Adding an experimental option to use blacklist phrases as a regex instead of a normal contains.

* Catch exception on bad regex.
Make regex phrase case insensitive.

Co-authored-by: WereGoingOcean <WereGoing@Ocean.com>

--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -142,6 +142,7 @@
     <string name="pref_message_backup" translatable="false">message_backup</string>
     <string name="pref_auto_reply" translatable="false">auto_reply</string>
     <string name="pref_unknown_number_reception" translatable="false">unknown_number_reception</string>
+    <string name="pref_blacklist_phrase_regex" translatable="false">blacklist_phrase_regex</string>
 
     <!-- MMS Configuration -->
     <string name="pref_mms_configuration" translatable="false">mms_configuration</string>
