--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,8 +18,9 @@
 
     <version
         name="5.4.3"
-        description="August --, 2020">
+        description="August 10th, 2020">
         <text>Upgrade target SDK to Android 11</text>
+        <text>Use Google's in-app review prompt</text>
     </version>
 
     <version
