--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -16,6 +16,13 @@
 
 <changelog>
 
+
+    <version
+        name="5.4.4"
+        description="August 31th, 2020">
+        <text>Bug fixes</text>
+    </version>
+
     <version
         name="5.4.3"
         description="August 12th, 2020">
