--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -42,6 +42,7 @@
     <string name="pref_website" translatable="false">web_link</string>
     <string name="pref_supported_platforms" translatable="false">supported_platforms</string>
     <string name="pref_about_privacy_policy" translatable="false">privacy_policy</string>
+    <string name="pref_about_tos" translatable="false">terms_of_service</string>
     <string name="pref_about_beta" translatable="false">beta</string>
 
     <!-- Help Page -->
