--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="5.4.6"
+        description="October 26th, 2020">
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="5.4.5"
         description="October 5th, 2020">
         <text>Bug fixes</text>
